# src/dtos/scenario.dto.ts
@@ -1,4 +1,4 @@
-import { IsNumber, IsString } from "class-validator";
+import { IsNumber, IsString } from 'class-validator';
 import { Severity } from '@/enums/severity.enum';
 import { CommentType } from '@/enums/commentType.enum';
 import { ScenarioMessage } from '@interfaces/scenario-message.interface';
@@ -14,4 +14,6 @@ export class CreateScenarioDto {
   public numberOfUsers: Number;
 
   public messages: Array<ScenarioMessage>;
+
+  public silentUsers: Array<string>;
 }
