# src/dtos/silentUser.dto.ts
@@ -1,0 +1,5 @@
+import { IsString } from 'class-validator';
+export class SilentUserDto {
+  @IsString()
+  public nickname: string;
+}
